parslers-benchmark/src/tests/invalid/syntaxErr/if/ifiErr.wacc
# if typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  ifi true 
  then
    skip
  else
    skip
  fi
end
